@@ -25,9 +25,9 @@
 //             1 ms         10 ms          1 ms
 //
 // - TCP flow from n0 to n3 using BulkSendApplication.
-// - The following simulation output is stored in result/ in ns-3 root directory:
+// - The following simulation output is stored in results/ in ns-3 top-level directory:
 //   - cwnd traces are stored in cwndTraces folder
-//   - queue length statistics are stored in queue-size.plotme file
+//   - queue length statistics are stored in queue-size.dat file
 //   - pcaps are stored in pcap folder
 //   - queueTraces folder contain the drop statistics at queue
 //   - queueStats.txt file contains the queue stats and config.txt file contains
@@ -48,10 +48,9 @@
 #include "ns3/traffic-control-module.h"
 
 using namespace ns3;
-Ptr<UniformRandomVariable> uv = CreateObject<UniformRandomVariable> ();
-std::string dir = "result/";
-double stopTime = 300;
-uint32_t dataSize = 524;
+std::string dir = "results/";
+Time stopTime = Seconds (60);
+uint32_t segmentSize = 524;
 
 // Function to check queue length of Router 1
 void
@@ -61,7 +60,7 @@ CheckQueueSize (Ptr<QueueDisc> queue)
 
   // Check queue size every 1/100 of a second
   Simulator::Schedule (Seconds (0.001), &CheckQueueSize, queue);
-  std::ofstream fPlotQueue (std::stringstream (dir + "queue-size.plotme").str ().c_str (), std::ios::out | std::ios::app);
+  std::ofstream fPlotQueue (std::stringstream (dir + "queue-size.dat").str ().c_str (), std::ios::out | std::ios::app);
   fPlotQueue << Simulator::Now ().GetSeconds () << " " << qSize << std::endl;
   fPlotQueue.close ();
 }
@@ -70,8 +69,8 @@ CheckQueueSize (Ptr<QueueDisc> queue)
 static void
 CwndChange (uint32_t oldCwnd, uint32_t newCwnd)
 {
-  std::ofstream fPlotQueue (dir + "cwndTraces/n0.plotme", std::ios::out | std::ios::app);
-  fPlotQueue << Simulator::Now ().GetSeconds () << " " << newCwnd / dataSize << std::endl;
+  std::ofstream fPlotQueue (dir + "cwndTraces/n0.dat", std::ios::out | std::ios::app);
+  fPlotQueue << Simulator::Now ().GetSeconds () << " " << newCwnd / segmentSize << std::endl;
   fPlotQueue.close ();
 }
 
@@ -91,60 +90,53 @@ TraceCwnd (uint32_t node, uint32_t cwndWindow,
 }
 
 // Function to install BulkSend application
-void InstallBulkSend (Ptr<Node> node, Ipv4Address address, uint16_t port, std::string sock_factory,
+void InstallBulkSend (Ptr<Node> node, Ipv4Address address, uint16_t port, std::string socketFactory,
                       uint32_t nodeId, uint32_t cwndWindow,
                       Callback <void, uint32_t, uint32_t> CwndTrace)
 {
-  BulkSendHelper source (sock_factory, InetSocketAddress (address, port));
+  BulkSendHelper source (socketFactory, InetSocketAddress (address, port));
   source.SetAttribute ("MaxBytes", UintegerValue (0));
   ApplicationContainer sourceApps = source.Install (node);
   sourceApps.Start (Seconds (10.0));
   Simulator::Schedule (Seconds (10.0) + Seconds (0.001), &TraceCwnd, nodeId, cwndWindow, CwndTrace);
-  sourceApps.Stop (Seconds (stopTime));
+  sourceApps.Stop (stopTime);
 }
 
 // Function to install sink application
-void InstallPacketSink (Ptr<Node> node, uint16_t port, std::string sock_factory)
+void InstallPacketSink (Ptr<Node> node, uint16_t port, std::string socketFactory)
 {
-  PacketSinkHelper sink (sock_factory, InetSocketAddress (Ipv4Address::GetAny (), port));
+  PacketSinkHelper sink (socketFactory, InetSocketAddress (Ipv4Address::GetAny (), port));
   ApplicationContainer sinkApps = sink.Install (node);
   sinkApps.Start (Seconds (10.0));
-  sinkApps.Stop (Seconds (stopTime));
+  sinkApps.Stop (stopTime);
 }
 
 int main (int argc, char *argv[])
 {
   uint32_t stream = 1;
-  std::string sock_factory = "ns3::TcpSocketFactory";
-  std::string transport_prot = "TcpLinuxReno";
-  std::string queue_disc_type = "FifoQueueDisc";
+  std::string socketFactory = "ns3::TcpSocketFactory";
+  std::string tcpTypeId = "ns3::TcpLinuxReno";
+  std::string qdiscTypeId = "ns3::FifoQueueDisc";
   bool isSack = true;
   uint32_t delAckCount = 1;
-  std::string recovery = "TcpClassicRecovery";
+  std::string recovery = "ns3::TcpClassicRecovery";
 
   CommandLine cmd;
-  cmd.AddValue ("stream", "Seed value for random variable", stream);
-  cmd.AddValue ("transport_prot", "Transport protocol to use: TcpNewReno, TcpLinuxReno", transport_prot);
-  cmd.AddValue ("queue_disc_type", "Queue disc type for gateway (e.g. ns3::CoDelQueueDisc)", queue_disc_type);
-  cmd.AddValue ("dataSize", "Data packet size", dataSize);
+  cmd.AddValue ("tcpTypeId", "TCP variant to use (e.g., ns3::TcpNewReno, ns3::TcpLinuxReno, etc.)", tcpTypeId);
+  cmd.AddValue ("qdiscTypeId", "Queue disc for gateway (e.g., ns3::CoDelQueueDisc)", qdiscTypeId);
+  cmd.AddValue ("segmentSize", "TCP segment size (bytes)", segmentSize);
   cmd.AddValue ("delAckCount", "Delayed ack count", delAckCount);
-  cmd.AddValue ("Sack", "Flag to enable/disable sack in TCP", isSack);
+  cmd.AddValue ("enableSack", "Flag to enable/disable sack in TCP", isSack);
   cmd.AddValue ("stopTime", "Stop time for applications / simulation time will be stopTime", stopTime);
   cmd.AddValue ("recovery", "Recovery algorithm type to use (e.g., ns3::TcpPrrRecovery", recovery);
   cmd.Parse (argc, argv);
 
-  uv->SetStream (stream);
-
-  queue_disc_type = std::string ("ns3::") + queue_disc_type;
-  transport_prot = std::string ("ns3::") + transport_prot;
-  recovery = std::string ("ns3::") + recovery;
-
   TypeId qdTid;
-  NS_ABORT_MSG_UNLESS (TypeId::LookupByNameFailSafe (queue_disc_type, &qdTid), "TypeId " << queue_disc_type << " not found");
+  NS_ABORT_MSG_UNLESS (TypeId::LookupByNameFailSafe (qdiscTypeId, &qdTid), "TypeId " << qdiscTypeId << " not found");
 
   // Set recovery algorithm and TCP variant
   Config::SetDefault ("ns3::TcpL4Protocol::RecoveryType", TypeIdValue (TypeId::LookupByName (recovery)));
-  if (transport_prot.compare ("ns3::TcpWestwoodPlus") == 0)
+  if (tcpTypeId.compare ("ns3::TcpWestwoodPlus") == 0)
     {
       // TcpWestwoodPlus is not an actual TypeId name; we need TcpWestwood here
       Config::SetDefault ("ns3::TcpL4Protocol::SocketType", TypeIdValue (TcpWestwood::GetTypeId ()));
@@ -154,8 +146,8 @@ int main (int argc, char *argv[])
   else
     {
       TypeId tcpTid;
-      NS_ABORT_MSG_UNLESS (TypeId::LookupByNameFailSafe (transport_prot, &tcpTid), "TypeId " << transport_prot << " not found");
-      Config::SetDefault ("ns3::TcpL4Protocol::SocketType", TypeIdValue (TypeId::LookupByName (transport_prot)));
+      NS_ABORT_MSG_UNLESS (TypeId::LookupByNameFailSafe (tcpTypeId, &tcpTid), "TypeId " << tcpTypeId << " not found");
+      Config::SetDefault ("ns3::TcpL4Protocol::SocketType", TypeIdValue (TypeId::LookupByName (tcpTypeId)));
     }
 
   // Create nodes
@@ -212,12 +204,12 @@ int main (int argc, char *argv[])
   Config::SetDefault ("ns3::TcpSocket::DelAckCount", UintegerValue (delAckCount));
 
   // Set default segment size of TCP packet to a specified value
-  Config::SetDefault ("ns3::TcpSocket::SegmentSize", UintegerValue (dataSize));
+  Config::SetDefault ("ns3::TcpSocket::SegmentSize", UintegerValue (segmentSize));
 
   // Enable/Disable SACK in TCP
   Config::SetDefault ("ns3::TcpSocketBase::Sack", BooleanValue (isSack));
 
-  // Create directories to store plotme files
+  // Create directories to store dat files
   struct stat buffer;
   int retVal;
   if ((stat (dir.c_str (), &buffer)) == 0)
@@ -238,11 +230,11 @@ int main (int argc, char *argv[])
   NS_UNUSED (retVal);
 
   // Set default parameters for queue discipline
-  Config::SetDefault (queue_disc_type + "::MaxSize", QueueSizeValue (QueueSize ("100p")));
+  Config::SetDefault (qdiscTypeId + "::MaxSize", QueueSizeValue (QueueSize ("100p")));
 
   // Install queue discipline on router
   TrafficControlHelper tch;
-  tch.SetRootQueueDisc (queue_disc_type);
+  tch.SetRootQueueDisc (qdiscTypeId);
   QueueDiscContainer qd;
   tch.Uninstall (routers.Get (0)->GetDevice (0));
   qd.Add (tch.Install (routers.Get (0)->GetDevice (0)).Get (0));
@@ -256,8 +248,8 @@ int main (int argc, char *argv[])
   AsciiTraceHelper asciiTraceHelper;
   Ptr<OutputStreamWrapper> streamWrapper;
 
-  // Create plotme to store packets dropped and marked at the router
-  streamWrapper = asciiTraceHelper.CreateFileStream (dir + "/queueTraces/drop-0.plotme");
+  // Create dat to store packets dropped and marked at the router
+  streamWrapper = asciiTraceHelper.CreateFileStream (dir + "/queueTraces/drop-0.dat");
   qd.Get (0)->TraceConnectWithoutContext ("Drop", MakeBoundCallback (&DropAtQueue, streamWrapper));
 
   // Install packet sink at receiver side
@@ -265,12 +257,12 @@ int main (int argc, char *argv[])
   InstallPacketSink (rightNodes.Get (0), port, "ns3::TcpSocketFactory");
 
   // Install BulkSend application
-  InstallBulkSend (leftNodes.Get (0), routerToRightIPAddress [0].GetAddress (1), port, sock_factory, 2, 0, MakeCallback (&CwndChange));
+  InstallBulkSend (leftNodes.Get (0), routerToRightIPAddress [0].GetAddress (1), port, socketFactory, 2, 0, MakeCallback (&CwndChange));
 
   // Enable PCAP on all the point to point interfaces
   pointToPointLeaf.EnablePcapAll (dir + "pcap/ns-3", true);
 
-  Simulator::Stop (Seconds (stopTime));
+  Simulator::Stop (stopTime);
   Simulator::Run ();
 
   // Store queue stats in a file
@@ -283,11 +275,11 @@ int main (int argc, char *argv[])
 
   // Store configuration of the simulation in a file
   myfile.open (dir + "config.txt", std::fstream::in | std::fstream::out | std::fstream::app);
-  myfile << "queue_disc_type " << queue_disc_type << "\n";
+  myfile << "qdiscTypeId " << qdiscTypeId << "\n";
   myfile << "stream  " << stream << "\n";
-  myfile << "dataSize " << dataSize << "\n";
+  myfile << "segmentSize " << segmentSize << "\n";
   myfile << "delAckCount " << delAckCount << "\n";
-  myfile << "stopTime " << stopTime << "\n";
+  myfile << "stopTime " << stopTime.As (Time::S) << "\n";
   myfile.close ();
 
   Simulator::Destroy ();
